update sqlalchemy syntax

--- a/extension_service/requirements.txt
+++ b/extension_service/requirements.txt
@@ -8,3 +8,4 @@ pydantic==2.5.1
 uvicorn[standard]==0.24.0.post1
 cloud-sql-python-connector==1.4.3
 sqlalchemy==2.0.23
+google-cloud-alloydb-connector[pg8000]
