--- a/.github/workflows/tests_fallback.yml
+++ b/.github/workflows/tests_fallback.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dir: [retrieval_service, langchain_tools_demo, vertexai_function_calling_demo]
+        dir: [retrieval_service, langchain_tools_demo, demo]
     permissions:
       contents: none
 
